# Glyph

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PLAN.md  PROGRESS.md  README.md
.github/workflows/: ci.yml
crates/glyphspace-accessibility/: Cargo.toml
crates/glyphspace-accessibility/src/: lib.rs
crates/glyphspace-accessibility/tests/: accessibility_renderer_tests.rs  native_accessibility_tests.rs
crates/glyphspace-ai/: Cargo.toml
crates/glyphspace-ai/src/: lib.rs
crates/glyphspace-ai/tests/: ai_tests.rs
crates/glyphspace-app/: Cargo.toml
crates/glyphspace-app/src/: lib.rs
crates/glyphspace-app/tests/: app_kernel_tests.rs  beyond_dioxus_tests.rs  beyond_sota_hosts_tests.rs  insane_sota_platform_tests.rs  production_framework_tests.rs  runtime_state_bridge_tests.rs  secure_ssr_tests.rs  sota_framework_tests.rs  true_sota_tests.rs
crates/glyphspace-cli/: Cargo.toml
crates/glyphspace-cli/src/: main.rs
crates/glyphspace-cli/tests/: gx_cli_tests.rs
crates/glyphspace-core/: Cargo.toml
crates/glyphspace-core/src/: lib.rs
crates/glyphspace-core/tests/: conformance_fuzz_contract_tests.rs  kernel_tests.rs  model_tests.rs  production_kernel_contract_tests.rs
crates/glyphspace-dev/: Cargo.toml
crates/glyphspace-dev/src/: lib.rs
crates/glyphspace-dev/tests/: dev_process_manager_tests.rs  dev_runtime_loop_tests.rs  dev_supervisor_tests.rs  dev_watcher_tests.rs  long_running_supervisor_tests.rs  native_watcher_bridge_tests.rs  orchestration_tests.rs  process_execution_tests.rs
crates/glyphspace-dsl/: Cargo.toml
crates/glyphspace-dsl/src/: lib.rs
crates/glyphspace-dsl/tests/: rust_app_dsl_tests.rs
crates/glyphspace-input/: Cargo.toml
crates/glyphspace-input/src/: lib.rs
crates/glyphspace-input/tests/: native_runtime_tests.rs
crates/glyphspace-layout/: Cargo.toml
crates/glyphspace-layout/src/: lib.rs
crates/glyphspace-layout/tests/: layout_tests.rs
crates/glyphspace-macros/: Cargo.toml
crates/glyphspace-macros/src/: lib.rs
crates/glyphspace-personalization/: Cargo.toml
crates/glyphspace-personalization/src/: lib.rs
crates/glyphspace-personalization/tests/: patch_inverse_property_tests.rs  personalization_tests.rs
crates/glyphspace-policy/: Cargo.toml
crates/glyphspace-policy/src/: lib.rs
crates/glyphspace-policy/tests/: enterprise_policy_tests.rs  policy_killer_tests.rs  policy_tests.rs
crates/glyphspace-render/: Cargo.toml
crates/glyphspace-render-wgpu/: Cargo.toml
crates/glyphspace-render-wgpu/src/: lib.rs
crates/glyphspace-render-wgpu/tests/: hardware_pipeline_tests.rs  native_swapchain_tests.rs  primitive_pipeline_tests.rs  product_renderer_tests.rs  production_renderer_tests.rs  shader_input_tests.rs  surface_binding_tests.rs
crates/glyphspace-render/src/: lib.rs
crates/glyphspace-render/tests/: actual_gpu_drawing_tests.rs  beyond_sota_runtime_tests.rs  gpu_renderer_tests.rs  native_host_tests.rs  render_maturity_tests.rs  render_stack_tests.rs
crates/glyphspace-schema/: Cargo.toml
crates/glyphspace-schema/src/: lib.rs
crates/glyphspace-schema/tests/: conformance_tests.rs
crates/glyphspace-text/: Cargo.toml
crates/glyphspace-text/src/: lib.rs
crates/glyphspace-text/tests/: mature_text_tests.rs  text_engine_tests.rs
crates/glyphspace-wasm/: Cargo.toml
crates/glyphspace-wasm/src/: lib.rs
docs/: accessibility.md  ai-contract.md  architecture.md  build-crm-30-minutes.md  capabilities.md  conformance-guide.md  current-stage.md  governance.md  host-adapter-guide.md  native-rust-app.md  personalization.md  policy-safe-ai-personalization.md  policy.md  production-grade-checklist.md  rendering.md  roadmap.md  rust-frontend.md  schema.md  standard.md  web-wasm-app.md
examples/crm-dashboard/: ai-operator.lens.glyph.json  app.glyph.json  capabilities.glyph.json  founder.lens.glyph.json  sales-rep.lens.glyph.json  vp-sales.lens.glyph.json
examples/crm-dashboard-rust/: Cargo.toml
examples/crm-dashboard-rust/src/: main.rs
examples/ecommerce-checkout/: README.md
examples/mobile-task-app/: README.md
examples/xr-workspace/: README.md
schemas/: capability.schema.json  glyphspace.schema.json  patch.schema.json  policy.schema.json
scripts/: build-wasm.sh  build.sh  check.sh  test.sh
templates/mobile/android/: settings.gradle.kts
templates/mobile/android/app/: build.gradle.kts
templates/mobile/android/app/src/main/java/glyphspace/host/: GlyphspaceRuntimeBridge.kt
templates/mobile/ios/: Package.swift
templates/mobile/ios/Sources/GlyphspaceMobile/: GlyphspaceRuntimeBridge.swift
tests/conformance/: README.md  developer-kernel-crm.glyph.json  policy-create-fake-capability.patch.glyph.json  policy-hide-mandatory-trust.patch.glyph.json  policy-remove-accessibility.patch.glyph.json  policy.schema.fixture.json  valid-lens.glyph.json  valid-world.glyph.json
tests/fixtures/: unsafe-hide-payment.patch.glyph.json
tests/snapshots/: founder-world.json  world.snapshot.json
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/public/: glyphspace_wasm.d.ts  glyphspace_wasm_bg.wasm
web/src/: index.ts  styles.css
web/src/demo/: crmDataSource.ts  crmWorld.ts
web/src/devtools/: inspectors.ts
web/src/sdk/: developer-kernel.conformance.test.ts  dsl.ts  host.ts  index.ts  policyBackend.ts  runtime.ts  sdk-contract.test.ts
web/src/wasm/: glyphspace_wasm.d.ts  glyphspace_wasm.js  glyphspace_wasm_bg.wasm  glyphspace_wasm_bg.wasm.d.ts
