[package]
name = "glyphspace-app"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust-first semantic frontend kernel for Glyphspace apps."

[dependencies]
glyphspace-accessibility = { path = "../glyphspace-accessibility" }
glyphspace-core = { path = "../glyphspace-core" }
glyphspace-dsl = { path = "../glyphspace-dsl" }
glyphspace-input = { path = "../glyphspace-input" }
glyphspace-layout = { path = "../glyphspace-layout" }
glyphspace-personalization = { path = "../glyphspace-personalization" }
glyphspace-policy = { path = "../glyphspace-policy" }
glyphspace-render = { path = "../glyphspace-render" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
