[package]
name = "glyphspace-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
glyphspace-core = { path = "../glyphspace-core" }
glyphspace-dev = { path = "../glyphspace-dev" }
glyphspace-app = { path = "../glyphspace-app" }
glyphspace-personalization = { path = "../glyphspace-personalization" }
glyphspace-policy = { path = "../glyphspace-policy" }
glyphspace-schema = { path = "../glyphspace-schema" }
serde.workspace = true
serde_json.workspace = true
tracing-subscriber.workspace = true
