[package]
name = "glyphspace-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Proc macros for ergonomic Glyphspace Rust app authoring."

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true

