[package]
name = "glyphspace-render-wgpu"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
glyphspace-render = { path = "../glyphspace-render" }
glyphspace-text = { path = "../glyphspace-text" }
serde.workspace = true
thiserror.workspace = true
wgpu.workspace = true
winit.workspace = true

[dev-dependencies]
glyphspace-core = { path = "../glyphspace-core" }
glyphspace-layout = { path = "../glyphspace-layout" }
