[package]
name = "crm-dashboard-rust"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
glyphspace-app = { path = "../../crates/glyphspace-app" }
glyphspace-core = { path = "../../crates/glyphspace-core" }
glyphspace-dsl = { path = "../../crates/glyphspace-dsl" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
